# Aria

./: .env.example  .gitignore  Makefile  README.md  skills.md
.github/workflows/: ci.yml
backend/: docker-compose.yml
backend/baselines/: baseline_metrics.json  plot_baselines.py  policies.py  run_grade.py  train_ppo.py
backend/bench/: latency.py
backend/services/env-service/: Dockerfile  Dockerfile.hf  HF_SPACE_README.md  OPENENV_API_NOTES.md  README.md  openenv.yaml  pyproject.toml
backend/services/env-service/src/env_service/: __init__.py  actions.py  aria_env.py  observation.py  relationship_model.py  server.py  world.py
backend/services/env-service/tests/: test_relationship_model.py
backend/services/gateway-service/: Dockerfile  README.md  pyproject.toml
backend/services/gateway-service/src/gateway_service/: __init__.py  clients.py  main.py  server.py  ws_mux.py
backend/services/gateway-service/tests/: test_gateway.py
backend/services/memory-service/: Dockerfile  README.md  pyproject.toml
backend/services/memory-service/src/memory_service/: __init__.py  api.py  embedder.py  graph_store.py  server.py  vector_store.py
backend/services/memory-service/tests/: test_api.py
backend/services/orchestrator-service/: Dockerfile  README.md  pyproject.toml
backend/services/orchestrator-service/src/orchestrator_service/: __init__.py  action_validator.py  agent.py  api.py  context_resolver.py  decision_engine.py  entity_extractor.py  intent_classifier.py  mapper.py  product_runtime.py  server.py  state_encoder.py
backend/services/orchestrator-service/src/orchestrator_service/tools/: __init__.py  calendar_stub.py  env_client.py  gmail_stub.py  memory_client.py
backend/services/orchestrator-service/tests/: test_agent.py  test_intent_entities_context.py  test_mapper.py  test_memory_wiring.py  test_policy_and_validation.py  test_state_encoder.py
backend/services/voice-service/: Dockerfile  README.md  pyproject.toml
backend/services/voice-service/src/voice_service/: __init__.py  api.py  elevenlabs_tts.py  intent.py  mock.py  server.py  streaming.py  stt.py  tts.py  vad.py  wake_word.py  ws.py
backend/services/voice-service/tests/: conftest.py  test_elevenlabs.py  test_mock.py  test_wake_word.py
backend/tests/env/: conftest.py  test_contract.py  test_determinism.py  test_golden_episodes.py  test_http.py  test_reset.py  test_reward_shaping.py  test_step.py
backend/tests/fixtures/: generate_golden.py
backend/tests/fixtures/golden_episodes/: README.md  (+4 more)
backend/tests/integration/: test_voice_to_env.py
backend/training/: README.md  action_parser.py  aria_train_colab.ipynb  aria_train_kaggle.ipynb  eval.py  plot.py  prompts.py  reward_fn.py  rollout.py  test_reward_fn.py  train_grpo.py  verify_space.py
docs/: ABLATION_STUDY.md  HACKATHON_BATTLE_PLAN.md  HACKATHON_SUBMISSION.md  LATENCY.json  LATENCY.md  PRODUCT_ROADMAP.md  SLIDES_OUTLINE.md  SUBMISSION_FORM.md  TEAM_HANDBOOK.md  VIDEO_SCRIPT.md
docs/assets/: baseline_results.json
docs/blog/: HF_BLOG_DRAFT.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BootSequence.tsx  CalendarPanel.tsx  EnvInspector.tsx  EventTrace.tsx  Header.tsx  InboxPanel.tsx  Panel.tsx  RelationshipsPanel.tsx  RewardRadar.tsx  StatusBar.tsx  TasksPanel.tsx  Ticker.tsx  VoiceDock.tsx  VoiceOrb.tsx
frontend/lib/: format.ts  mockData.ts  ws.ts
frontend/lib/contracts/: index.ts
frontend/public/voice/: voice-hero.webm
