[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gateway-service"
version = "0.1.0"
description = "ARIA — Public gateway: REST proxy + WebSocket multiplexer. Boring by design."
requires-python = ">=3.11"
dependencies = [
    "aria-contracts>=0.1,<0.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7,<3",
    "httpx>=0.27",
    "websockets>=12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["src"]
