[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-service"
version = "0.1.0"
description = "ARIA — Memory service (four namespaces: episodic, semantic, relationship, preference)."
requires-python = ">=3.11"
dependencies = [
    "aria-contracts>=0.1,<0.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "qdrant-client>=1.7",
    "networkx>=3.1",
    "numpy>=1.26",
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]
