[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrator-service"
version = "0.1.0"
description = "ARIA — orchestrator (agent loop) mapping user turns to env actions + stubbed tool calls."
requires-python = ">=3.11"
dependencies = [
    "aria-contracts>=0.1,<0.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7,<3",
    "httpx>=0.27",
    "websockets>=12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]
llm = ["anthropic>=0.34"]
policy = ["onnxruntime>=1.17", "numpy>=1.26"]
nlp = ["onnxruntime>=1.17", "numpy>=1.26"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
